# skyway-rest-api-swagger

./: CMakeLists.txt  README.md  app.js  manifest.yml  package-lock.json  package.json
api/swagger/: swagger.yaml
config/: default.yaml
